# my-01-rcli

./: Cargo.toml  README.md  _typos.toml  deny.toml
doc/: readme.md
fixtures/: ChaCha20Poly1305.txt  blake3.txt  index.html  text_sign_result.txt
src/: lib.rs  main.rs  utils.rs
src/cli/: base64.rs  csv.rs  genpass.rs  http.rs  jwt.rs  mod.rs  text.rs
src/process/: b64.rs  csv_convert.rs  http_server.rs  jwt_convert.rs  mod.rs  text.rs
