[package]
name = "rcli"
version = "0.1.0"
edition = "2021"
authors = ["soddygo <soddygo@gmail.com>"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.83"
axum = "0.7.5"
base64 = "0.22.1"
blake3 = "1.5.1"
chacha20poly1305 = "0.10.1"
clap = { version = "4.5.4", features = ["default","derive"] }
csv = "1.3.0"
ed25519-dalek = "2.1.1"
enum_dispatch = "0.3.13"
rand = "0.8.5"
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
serde_yaml = "0.9.34"
tokio = {version = "1.37.0",features = ["rt-multi-thread","rt","macros","net","fs"]}
tower-http = "0.5.2"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
zxcvbn = "2.2.2"
